# card-game

./: .gitignore  docker-compose.yaml  readme.md
card_game/: .dockerignore  .env  .gitignore  Dockerfile  class.md  pyproject.toml  scripts.py
card_game/card_game/: main.py
card_game/card_game/api/: api.py
card_game/card_game/api/dependency/: authentication.py  database.py  usecase.py
card_game/card_game/api/routes/: auth.py  board.py  card.py  user.py
card_game/card_game/configs/: config.py
card_game/card_game/constant/: constant.py
card_game/card_game/entities/: user.py
card_game/card_game/repositories/: base_repository.py  database.py  log_repository.py  redis_repository.py  user_repository.py
card_game/card_game/schemas/: base.py  board.py  card.py  external.py  token.py  user.py
card_game/card_game/usecase/: auth_usecase.py  game_usecase.py  user_usecase.py
card_game/migrations/: env.py
card_game/migrations/versions/: 051154132a28_add_users_table.py
card_game/script/: migrate.sh
card_game/tests/: test_api.py  test_card_game.py  test_user_usecase.py
queue_log/: .dockerignore  .env  Dockerfile  go.mod  go.sum  main.go
queue_log/delivery/http/: handler.go
queue_log/delivery/mq/: mq.go
queue_log/dto/: dto.go
queue_log/entities/: entities.go
queue_log/repository/: action_repository.go  board_repository.go
queue_log/usecase/: usecase.go
